--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,34 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-}
+.navBar {
+    background-color: #333;
+    overflow: hidden;
+    position: sticky;
+    top: 0;
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  .navBar a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navBar a:hover {
+    color: #118B63;
+  }
+  
+  .container{
+      margin: 5%;
+  }
+  .eventCard{
+      border:  0.1px solid black;
+      margin: 20px;
+  }
 
-.App-link {
-  color: #09d3ac;
-}
+  .eventTitle{
+    font-weight: bold;
+    font-size: large;
+    border-bottom: 0.1px solid black;
+  }
